<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.cachelist.CacheListActivity">

    <item
        android:id="@+id/cachelist_action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/cachelist_action_map_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cachelist_action_navigate"
        android:title="@string/cachelist_action_navigate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/cachelist_action_login"
        android:title="@string/cachelist_action_login"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="50"
        android:title="@string/cachelist_action_about"
        app:showAsAction="never"/>

</menu>
